--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "axios": "^1.7.2",
     "i18next": "^23.12.2",
     "i18next-http-backend": "^2.5.2",
-    "lucide-react": "^latest_version",  // Replace with the actual version after installation
+    "lucide-react": "^0.0.0",  
     "postcss": "^8.4.39",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
