--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.36.1",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "i18next": "^23.12.2",
     "i18next-http-backend": "^2.5.2",
-    "lucide-react": "^0.515.0",  
+    "lucide-react": "^0.515.0",
     "postcss": "^8.4.39",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
