--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "nodemailer": "^6.9.13",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "passport": "^0.7.0",           {# FIX: Added new dependency #}
+    "passport-google-oauth20": "^2.0.0", {# FIX: Added new dependency #}
+    "pdfkit": "^0.15.0",           {# FIX: Added new dependency #}
+    "multer": "^1.4.5-lts.1"       {# FIX: Added new dependency #}
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -29,12 +33,16 @@
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.2",
-    "@types/nodemailer": "^6.4.15",
+    "@types/nodemailer": "^6.9.13",
     "@types/supertest": "^6.0.2",
     "eslint": "^8.57.0",
     "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "@types/passport": "^1.0.16",   {# FIX: Added new devDependency #}
+    "@types/passport-google-oauth20": "^2.0.11", {# FIX: Added new devDependency #}
+    "@types/pdfkit": "^0.13.4",     {# FIX: Added new devDependency #}
+    "@types/multer": "^1.4.11"      {# FIX: Added new devDependency #}
   }
 }
