--- a/backend/package.json
+++ b/backend/package.json
@@ -21,10 +21,10 @@
     "mongoose": "^8.4.1",
     "nodemailer": "^6.9.13",
     "zod": "^3.23.8",
-    "passport": "^0.7.0",           {# FIX: Added new dependency #}
-    "passport-google-oauth20": "^2.0.0", {# FIX: Added new dependency #}
-    "pdfkit": "^0.15.0",           {# FIX: Added new dependency #}
-    "multer": "^1.4.5-lts.1"       {# FIX: Added new dependency #}
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "pdfkit": "^0.15.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -40,9 +40,9 @@
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5",
-    "@types/passport": "^1.0.16",   {# FIX: Added new devDependency #}
-    "@types/passport-google-oauth20": "^2.0.11", {# FIX: Added new devDependency #}
-    "@types/pdfkit": "^0.13.4",     {# FIX: Added new devDependency #}
-    "@types/multer": "^1.4.11"      {# FIX: Added new devDependency #}
+    "@types/passport": "^1.0.16",
+    "@types/passport-google-oauth20": "^2.0.11",
+    "@types/pdfkit": "^0.13.4",
+    "@types/multer": "^1.4.11"
   }
 }
