--- a/backend/package.json
+++ b/backend/package.json
@@ -13,18 +13,19 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
-    "nodemailer": "^6.9.1",           
-    "zod": "^3.23.8",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.15.0",
-    "multer": "^1.4.5-lts.1"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -32,17 +33,17 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.14.2",
-    "@types/nodemailer": "^6.4.14",   
+    "@types/nodemailer": "^6.4.14",
+    "@types/passport": "^1.0.16",
+    "@types/passport-google-oauth20": "^2.0.11",
+    "@types/pdfkit": "^0.13.4",
     "@types/supertest": "^6.0.2",
     "eslint": "^8.57.0",
     "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5",
-    "@types/passport": "^1.0.16",
-    "@types/passport-google-oauth20": "^2.0.11",
-    "@types/pdfkit": "^0.13.4",
-    "@types/multer": "^1.4.11"
+    "typescript": "^5.4.5"
   }
 }
