--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,12 +21,14 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.0.0",
     "react-router-dom": "^6.25.1",
+    "recharts": "^2.12.7",
     "tailwindcss": "^3.4.6",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/recharts": "^1.8.29",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
