--- a/render.yaml
+++ b/render.yaml
@@ -22,4 +22,5 @@ services:
     staticPublishPath: dist
     envVars:
       - key: VITE_API_URL
-        value: https://hnv-saas-backend.onrender.com/api
+        # CORRECTED to your live backend URL
+        value: https://hnv.onrender.com/api
