--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "i18next": "^23.12.2",
+    "i18next-browser-languagedetector": "^7.2.1",
     "i18next-http-backend": "^2.5.2",
     "lucide-react": "^0.515.0",
     "postcss": "^8.4.39",
@@ -23,6 +24,7 @@
     "react-router-dom": "^6.25.1",
     "recharts": "^2.12.7",
     "tailwindcss": "^3.4.6",
+    "vite-plugin-pwa": "^0.2.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
@@ -34,7 +36,6 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "typescript": "^5.2.2",
-    "vite": "^5.3.4",
-    "vite-plugin-pwa": "^0.2.0"
+    "vite": "^5.3.4"
   }
 }
