--- a/backend/package.json
+++ b/backend/package.json
@@ -1,49 +1,40 @@
 {
   "name": "hnv-saas-backend",
   "version": "1.0.0",
-  "main": "dist/server.js",
-  "types": "dist/server.d.ts",
+  "description": "Backend for HNV SaaS",
+  "main": "server.js",
   "scripts": {
     "start": "node dist/server.js",
-    "dev": "ts-node-dev --respawn --transpile-only server.ts",
+    "server": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
     "build": "tsc",
-    "lint": "eslint . --ext .ts"
+    "test": "jest"
   },
+  "author": "Zaad",
+  "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.2",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "date-fns": "^3.6.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "express-rate-limit": "^7.2.0",
-    "helmet": "^7.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.1",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.1",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
-    "pdfkit": "^0.15.0",
-    "zod": "^3.23.8"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/multer": "^1.4.11",
-    "@types/node": "^20.14.2",
-    "@types/nodemailer": "^6.4.14",
-    "@types/passport": "^1.0.16",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.4.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/node": "^18.14.0",
+    "@types/passport": "^1.0.12",
     "@types/passport-google-oauth20": "^2.0.11",
-    "@types/pdfkit": "^0.13.4",
-    "@types/supertest": "^6.0.2",
-    "eslint": "^8.57.0",
-    "supertest": "^7.0.0",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5"
+    "jest": "^29.4.3",
+    "nodemon": "^2.0.20",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
