--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for HNV SaaS",
   "main": "server.js",
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "node backend/server.js",
     "server": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
     "build": "tsc",
     "test": "jest"
