--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -13,12 +13,12 @@
     "paths": {
       "*": ["node_modules/*"]
     },
-    "types": ["node"],
+    "types": ["node", "jest"],
     "typeRoots": ["node_modules/@types"],
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "sourceMap": true
   },
   "include": ["**/*.ts"],
-  "exclude": ["node_modules", "test"]
+  "exclude": ["node_modules", "dist", "coverage"]
 }
