--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.ts",
-    "build": "rm -f server.js && tsc --noEmitOnError false && ls -l",
-    "test": "jest",
-    "check": "pwd && ls -l && ls -l routes/"
+    "build": "rm -f server.js && tsc --skipLibCheck --noEmitOnError false",
+    "test": "jest --detectOpenHandles",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint . --ext .ts",
+    "format": "prettier --write \"**/*.ts\""
   },
-  "author": "Zaad",
+  "author": "Your Name",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
@@ -43,11 +46,22 @@
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/pdfkit": "^0.12.9",
     "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.4.3",
     "nodemon": "^2.0.20",
+    "prettier": "^2.8.7",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFiles": ["dotenv/config"]
   }
 }
