--- a/backend/package.json
+++ b/backend/package.json
@@ -7,14 +7,8 @@
     "start": "node server.js",
     "dev": "nodemon server.ts",
     "build": "rm -f server.js && tsc --skipLibCheck --noEmitOnError false",
-    "test": "jest --detectOpenHandles",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "lint": "eslint . --ext .ts",
-    "format": "prettier --write \"**/*.ts\""
+    "test": "jest --detectOpenHandles"
   },
-  "author": "Your Name",
-  "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
@@ -23,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-session": "^1.18.0",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
@@ -37,6 +32,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.18.0",
     "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/multer": "^1.4.7",
@@ -58,10 +54,5 @@
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "setupFiles": ["dotenv/config"]
   }
 }
