--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "test": "jest --detectOpenHandles"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.7",
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -26,7 +27,8 @@
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.13.0",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "googleapis": "^latest_version_here" 
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -37,7 +39,6 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.14.0",
-    "@types/nodemailer": "^6.4.7",
     "@types/passport": "^1.0.12",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/pdfkit": "^0.12.9",
