--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,7 @@
     "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.13.0",
     "zod": "^3.21.4",
-    "googleapis": "^latest_version_here" 
+    "googleapis": "^118.0.0" 
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
