--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,9 @@
     "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.13.0",
     "zod": "^3.21.4",
-    "googleapis": "^118.0.0" 
+    "googleapis": "^118.0.0",
+    "morgan": "^1.10.0",           // ADDED THIS LINE
+    "cookie-parser": "^1.4.6"      // ADDED THIS LINE
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -43,8 +45,6 @@
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/pdfkit": "^0.12.9",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -54,6 +54,8 @@
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@types/morgan": "^1.9.9",            // ADDED THIS LINE
+    "@types/cookie-parser": "^1.4.6"      // ADDED THIS LINE
   }
 }
