--- a/backend/package.json
+++ b/backend/package.json
@@ -29,8 +29,8 @@
     "pdfkit": "^0.13.0",
     "zod": "^3.21.4",
     "googleapis": "^118.0.0",
-    "morgan": "^1.10.0",           // ADDED THIS LINE
-    "cookie-parser": "^1.4.6"      // ADDED THIS LINE
+    "morgan": "^1.10.0",
+    "cookie-parser": "^1.4.6"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -55,7 +55,7 @@
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
-    "@types/morgan": "^1.9.9",            // ADDED THIS LINE
-    "@types/cookie-parser": "^1.4.6"      // ADDED THIS LINE
+    "@types/morgan": "^1.9.9",
+    "@types/cookie-parser": "^1.4.6"
   }
 }
