--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -21,5 +21,8 @@
     "resolveJsonModule": true
   },
   "include": ["**/*.ts"],
-  "exclude": ["node_modules", "dist", "coverage", "**/*.test.ts"]
+  "exclude": ["node_modules", "dist", "coverage", "**/*.test.ts"],
+  "files": [
+    "src/types/express.d.ts" // Explicitly include the global declaration file
+  ]
 }
