--- a/backend/package.json
+++ b/backend/package.json
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
-    "**@types/express": "^4.18.2"**,  
+    "@types/express": "^4.18.2",
     "@types/express-session": "^1.18.0",
     "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.1",
