--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -13,6 +13,7 @@
     "paths": {
       "*": ["node_modules/*"]
     },
+    "types": ["node", "jest"],
     "typeRoots": ["node_modules/@types"],
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
