--- a/render.yaml
+++ b/render.yaml
@@ -1,3 +1,4 @@
+# render.yaml
 services:
   - type: web
     name: hnv-saas-backend
@@ -11,6 +12,8 @@ services:
         value: 5001
       # IMPORTANT: Your secret variables like MONGO_URI, JWT_SECRET, etc.
       # should be set in the Render Dashboard, not committed here.
+      - key: CORS_ALLOWED_ORIGINS # New environment variable for CORS
+        value: "http://localhost:3000,https://hnv-1-frontend.onrender.com,https://www.hnvpm.com,https://hnvpm.com" # Example values, customize as needed
 
   - type: static
     name: hnv-saas-frontend
