--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.0.0",
     "react-router-dom": "^6.25.1",
+    "react-scroll": "^1.9.0",
     "recharts": "^2.12.7",
     "tailwindcss": "^3.4.6",
     "vite-plugin-pwa": "^0.2.0",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-scroll": "^1.8.10",
     "@types/recharts": "^1.8.29",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8.57.0",
