--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,8 @@
     "zod": "^3.21.4",
     "googleapis": "^118.0.0",
     "morgan": "^1.10.0",
-    "cookie-parser": "^1.4.6"
+    "cookie-parser": "^1.4.6",
+    "marked": "^5.1.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -39,6 +40,7 @@
     "@types/express-session": "^1.18.0",
     "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/marked": "^5.1.0",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.14.0",
     "@types/passport": "^1.0.12",
