--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -13,7 +13,7 @@
     "paths": {
       "*": ["node_modules/*"]
     },
-    "types": ["node", "jest"],
+    "types": ["node", "jest", "marked"],
     "typeRoots": ["node_modules/@types"],
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
