--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,43 +1,43 @@
 {
-  "name": "hnv-saas-frontend",
+  "name": "hnv-frontend",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.36.1",
-    "autoprefixer": "^10.4.19",
-    "axios": "^1.7.2",
-    "framer-motion": "^11.2.12",
-    "i18next": "^23.12.2",
-    "i18next-browser-languagedetector": "^7.2.1",
-    "i18next-http-backend": "^2.5.2",
-    "lucide-react": "^0.515.0",
-    "postcss": "^8.4.39",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-i18next": "^15.0.0",
-    "react-router-dom": "^6.25.1",
-    "react-scroll": "^1.9.0",
-    "recharts": "^2.12.7",
-    "tailwindcss": "^3.4.6",
-    "vite-plugin-pwa": "^0.2.0",
-    "zustand": "^4.5.4"
+    "@tanstack/react-query": "^4.32.6",
+    "axios": "^1.5.0",
+    "framer-motion": "^10.16.4",
+    "i18next": "^23.5.1",
+    "lucide-react": "^0.279.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^13.2.2",
+    "react-router-dom": "^6.15.0",
+    "recharts": "^2.8.0",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@types/react-scroll": "^1.8.10",
-    "@types/recharts": "^1.8.29",
-    "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.15",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5"
+  }
+}
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
   }
