--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,14 +17,19 @@
     "lucide-react": "^0.279.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-i18next": "^13.2.2",
     "react-router-dom": "^6.15.0",
+    "react-scroll": "^1.8.9",
     "recharts": "^2.8.0",
-    "zustand": "^4.4.1"
+    "zustand": "^4.4.1",
+    "@hookform/resolvers": "^3.3.1",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-scroll": "^1.8.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
