--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -20,6 +20,5 @@
     "noImplicitReturns": false,
     "noImplicitThis": false
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src"]
 }
