--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,36 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.32.6",
-    "axios": "^1.5.0",
-    "framer-motion": "^10.16.4",
-    "i18next": "^23.5.1",
-    "lucide-react": "^0.279.0",
+    "@heroicons/react": "^2.0.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.4",
-    "react-i18next": "^13.2.2",
-    "react-router-dom": "^6.15.0",
-    "react-scroll": "^1.8.9",
-    "recharts": "^2.8.0",
-    "zustand": "^4.4.1",
-    "@hookform/resolvers": "^3.3.1",
-    "zod": "^3.22.2"
+    "react-router-dom": "^6.8.1",
+    "react-i18next": "^12.1.5",
+    "i18next": "^22.4.10",
+    "axios": "^1.3.4"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@types/react-scroll": "^1.8.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "postcss": "^8.4.29",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
+    "typescript": "^4.9.3",
+    "vite": "^4.1.0"
   }
 }
