--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,10 @@
     "react-router-dom": "^6.8.1",
     "react-i18next": "^12.1.5",
     "i18next": "^22.4.10",
-    "axios": "^1.3.4"
+    "axios": "^1.3.4",
+    "react-hook-form": "^7.43.0",
+    "@hookform/resolvers": "^2.9.11",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
