--- a/backend/package.json
+++ b/backend/package.json
@@ -7,42 +7,38 @@
     "start": "node server.js",
     "dev": "nodemon server.ts",
     "build": "rm -f server.js && tsc --skipLibCheck --noEmitOnError false",
-    "test": "jest --detectOpenHandles",
-    "migrate:users": "ts-node scripts/migrateOldUsers.ts"
+    "test": "jest --detectOpenHandles"
   },
   "dependencies": {
     "@types/nodemailer": "^6.4.7",
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.18.0",
-    "googleapis": "^118.0.0",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
-    "marked": "^9.1.2",
     "mongoose": "^7.0.0",
-    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.13.0",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "googleapis": "^118.0.0",
+    "morgan": "^1.10.0",
+    "cookie-parser": "^1.4.6"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
-    "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.17",  
     "@types/express-session": "^1.18.0",
     "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.1",
-    "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.14.0",
     "@types/passport": "^1.0.12",
@@ -57,7 +53,9 @@
     "prettier": "^2.8.7",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^4.9.5"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5",
+    "@types/morgan": "^1.9.9",
+    "@types/cookie-parser": "^1.4.6"
   }
 }
