--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-scroll": "^1.8.7",
