--- a/backend/package.json
+++ b/backend/package.json
@@ -1,61 +1,45 @@
 {
-  "name": "hnv-saas-backend",
+  "name": "hnv-property-management",
   "version": "1.0.0",
-  "description": "Backend for HNV SaaS",
-  "main": "server.js",
+  "description": "Modern property management platform with TWA support",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.ts",
-    "build": "rm -f server.js && tsc --skipLibCheck --noEmitOnError false",
-    "test": "jest --detectOpenHandles"
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "dev:backend": "cd backend && npm run dev",
+    "dev:frontend": "cd frontend && npm run dev",
+    "build": "npm run build:backend && npm run build:frontend",
+    "build:backend": "cd backend && npm run build",
+    "build:frontend": "cd frontend && npm run build",
+    "build:twa": "./build-twa.sh",
+    "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install",
+    "test": "cd backend && npm test",
+    "lint": "cd frontend && npm run lint",
+    "deploy": "npm run build && echo 'Ready for deployment'",
+    "start": "cd backend && npm start"
   },
-  "dependencies": {
-    "@types/nodemailer": "^6.4.7",
-    "axios": "^1.3.4",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "date-fns": "^2.29.3",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-async-handler": "^1.2.0",
-    "express-session": "^1.18.0",
-    "helmet": "^6.0.1",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.0",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.1",
-    "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0",
-    "pdfkit": "^0.13.0",
-    "zod": "^3.21.4",
-    "googleapis": "^118.0.0",
-    "morgan": "^1.10.0",
-    "cookie-parser": "^1.4.6"
-  },
+  "keywords": [
+    "property-management",
+    "real-estate",
+    "landlord",
+    "tenant",
+    "pwa",
+    "twa",
+    "mobile-app"
+  ],
+  "author": "HNV Solutions",
+  "license": "MIT",
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",  
-    "@types/express-session": "^1.18.0",
-    "@types/jest": "^29.4.0",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/multer": "^1.4.7",
-    "@types/node": "^18.14.0",
-    "@types/passport": "^1.0.12",
-    "@types/passport-google-oauth20": "^2.0.11",
-    "@types/pdfkit": "^0.12.9",
-    "@types/supertest": "^2.0.12",
-    "eslint": "^8.38.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.4.3",
-    "nodemon": "^2.0.20",
-    "prettier": "^2.8.7",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.0.5",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
-    "@types/morgan": "^1.9.9",
-    "@types/cookie-parser": "^1.4.6"
-  }
+    "concurrently": "^8.2.0"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-username/hnv-property-management.git"
+  },
+  "bugs": {
+    "url": "https://github.com/your-username/hnv-property-management/issues"
+  },
+  "homepage": "https://your-domain.com"
 }
