--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,8 @@
     "zod": "^3.21.4",
     "googleapis": "^118.0.0",
     "morgan": "^1.10.0",
-    "cookie-parser": "^1.4.6"
+    "cookie-parser": "^1.4.6",
+    "marked": "^9.1.6"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -60,6 +61,7 @@
     "typescript": "^4.9.5",
     "@types/morgan": "^1.9.9",
     "@types/cookie-parser": "^1.4.6",
-    "@types/hpp": "^0.2.5"
+    "@types/hpp": "^0.2.5",
+    "@types/marked": "^6.0.0"
   }
 }
