--- a/backend/package.json
+++ b/backend/package.json
@@ -69,6 +69,9 @@
     "@types/morgan": "^1.9.9",
     "@types/cookie-parser": "^1.4.6",
     "@types/hpp": "^0.2.5",
-    "@types/marked": "^6.0.0"
+    "@types/marked": "^6.0.0",
+    "@types/express-slow-down": "^1.3.2",
+    "@types/json2csv": "^5.0.3",
+    "@types/compression": "^1.7.2"
   }
 }
