--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: hnv-backend
     env: node
     plan: starter
-    buildCommand: cd backend && npm install && npm run build:prod
+    buildCommand: cd backend && npm install --production
     startCommand: cd backend && npm start
     envVars:
       - key: NODE_ENV
