Fix 503 errors: improve server startup, CORS config, error handling, and build process

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,11 @@
   "description": "Backend for HNV SaaS",
   "main": "dist/server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node dist/server.js",
     "dev": "nodemon server.ts",
     "build": "tsc --skipLibCheck --noEmitOnError false",
     "build:safe": "tsc --skipLibCheck --noEmitOnError false",
     "build:prod": "tsc --skipLibCheck --noEmitOnError false",
-
     "test": "jest --detectOpenHandles"
   },
   "dependencies": {
