--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     plan: starter
     buildCommand: cd backend && npm install && npm run build
-    startCommand: cd backend && node server.js
+    startCommand: cd backend && node dist/server.js
     envVars:
       - key: NODE_ENV
         value: production
