--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-MONGO_URI=mongodb+srv://rajputragav420:5EIWHghGDZ4rEpmr@hnv.qw1lakw.mongodb.net/?retryWrites=true&w=majority&appName=HNV
-JWT_SECRET=your-super-secret-jwt-key-change-in-production-2024
+MONGODB_URI=mongodb+srv://rajputragav420:5EIWHghGDZ4rEpmr@hnv.qw1lakw.mongodb.net/?retryWrites=true&w=majority&appName=HNV
+JWT_SECRET=HNV-2024-ULTRA-SECURE-JWT-SECRET-KEY-FOR-PRODUCTION-DO-NOT-SHARE-9x8y7z6w5v4u3t2s1r0q
 NODE_ENV=development
 PORT=5001
 FRONTEND_URL=http://localhost:3000
