fix: comprehensive application fixes
- Fix translation system (Spanish/French translations)
- Add React.memo and useMemo for performance
- Create error boundary component
- Add database transactions to action chains
- Improve accessibility with better focus indicators
- Add skeleton loaders for better UX
- Create global search hook with debouncing
- Add translation validation script
- Improve image optimization and alt text

--- a/backend/.env
+++ b/backend/.env
@@ -20,3 +20,7 @@ REDIS_URL=redis://localhost:6379
 STRIPE_SECRET_KEY=your_stripe_secret_key_here
 STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret_here
 RESEND_API_KEY=your_resend_api_key_here
+# File Upload Configuration
+FILE_UPLOAD_ENABLED=true
+UPLOAD_MAX_SIZE=5242880
+UPLOAD_ALLOWED_TYPES=image/jpeg,image/jpg,image/png,image/gif,image/webp
