Fix tenant image upload and display

--- a/backend/.env
+++ b/backend/.env
@@ -24,3 +24,8 @@ RESEND_API_KEY=your_resend_api_key_here
 FILE_UPLOAD_ENABLED=true
 UPLOAD_MAX_SIZE=5242880
 UPLOAD_ALLOWED_TYPES=image/jpeg,image/jpg,image/png,image/gif,image/webp
+
+# Cloudinary Configuration (for image uploads)
+CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
